--- a/HTSA.css
+++ b/HTSA.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 15px;
     text-align: center;
     border-spacing: none;
 }
@@ -11,7 +10,7 @@ body {
 iframe {
     border: none;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     display: block;
     text-decoration-color: orangered;
 }
