--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@
 <title>MK3-SSL</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="/_layouts/ALPHA.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('{IMAGE}');
+  background-image: url('/.github/logo.jpg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
