--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/.github/logo.jpg');
+  background-image: url('https://github.com/mksipe/Shell-Script-Lib/blob/master/.github/logo.jpeg');
     min-height: 100%;
     background-position: center;
     background-size: cover;
