--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,31 +4,9 @@
 <title>MK3-SSL</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/_layouts/ALPHA.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('https://github.com/mksipe/Shell-Script-Lib/blob/master/.github/logo.jpeg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
+<link rel="stylesheet" href="https://github.com/mksipe/Shell-Script-Lib/blob/master/_layouts/ALPHA.css">
 <body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Under Development</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">ETA 2019</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-  </div>
-</div>
-
+  <h1>
+    MK3-SSL
+  </h1>
 </body>
-</html>
