--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,4 +9,9 @@
   <h1>
     MK3-SSL
   </h1>
-</body>
+  <p> 
+    This repository Shell-Script-Lib is meant to be used as a command line tool that will hopefully be deemed as useful while hardening your Linux system. I cannot guarantee this to be the most stable source for your system but it has been tested and is regularly checked for new ways to improve and to become more stable. Unfortunately, this type of repository doesn't have command setting on your system. They are all shell scripts. I'm working on ways to make this a thing but I need more time to work on this. I would appreciate the support from other people who are willing to make this a better program and to help make it more user-friendly.
+  </p>
+  
+  </body>
+  
